--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
         </title>
         <style>
             body {
-                background-color: 1496B4;
+                background-color: #1496B4;
             }
             h1 {
-                color: 288A9B;
+                color: #288A9B;
             }
             p {
-                color: 153F76;
+                color: #153F76;
             }
         </style>
     </head>
